# Megano-django

./: .env.dist  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
market/: error_logs.txt  info_log.txt  jinja2_env.py
market/basket/: admin.py  basket.py  forms.py  models.py  urls.py  views.py
market/comments/: admin.py  forms.py  models.py  tests.py
market/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
market/context_processors/: shop_views_context.py
market/discounts/: admin.py  calculate.py  models.py  urls.py  views.py
market/fixtures/: 0-user-group-fixtures.json  01-user-fixtures.json  011-offers-fixtures.json  012-history-products-fixtures.json  013-order_orderstatus.json  015-order_order.json  02-profile-fixtures.json  02-profile-fixtures.json.json  03-product-fixtures.json  03-products-fixtures.json  04-shop-fixtures.json  05-banners.json  05-category-fixtures.json  06-comment-fixtures.json  06-products-productdetail.json  07-banners-fixtures.json  07-product-detail.json  07-sliders-fixtures.json  08-details-fixtures.json  09-products-detail-fixtures.json  10-limited-offers-fixtures.json  11-offers-fixtures.json  14-order_delivery.json  15-order_order.json  16-order_productinorder.json  17-products_image-fixtures.json  18-discounts.json
market/history/: admin.py  apps.py  models.py  urls.py  views.py
market/order/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
market/payment/: functions.py  serializers.py  tests.py  urls.py  views.py
market/products/: admin.py  forms.py  models.py  urls.py  (+1 more)
(+117 files in other folders)
